# Github-Explore-Plus

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  gm-rnv.js  gm.js  public_greasemonkey_script.js  pyproject.toml  requirements.txt
github_search/: __init__.py  data_utils.py  search.py  util.py
static/: spectre.min.css
templates/: gm.js
tests/: test_github_search.py  test_redis_utils.py
