[tool.poetry]
name = "github_search"
version = "0.1.0"
description = ""
authors = ["Joey Stevens"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
fastapi = "^0.44.0"
schedule = "^0.6.0"
email-validator = "^1.0"
uvicorn = "^0.10.8"
redis = "^3.3.11"
fakeredis = "^1.1.0"
aiofiles = "^0.4.0"
jinja2 = "^2.10.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
